syntax = "proto3";

option go_package = "github.com/atlarge-research/opendc-emulate-kubernetes/api/controlplane/events";
package apate.controlplane.events;

// This node fails, so every request times out
message NodeFailure {}

// Apply latency to every request
message NetworkLatency {
    // The amount of applied latency
    int32 latency_msec = 1;
}

// We apply timeout to every request from k8s besides the ping / heartbeat
message TimeoutKeepHeartbeat {}

// We only apply timeout to ping / heartbeat
message NoTimeoutNoHeartbeat {}

// Apply resource pressure to this node
message ResourcePressure {
    // The amount of bytes of memory used
    string memory_usage = 1;

    // The amount of milli CPUs used
    int64 cpu_usage = 2;

    // The amount of bytes of storage used
    string storage_usage = 3;

    // The amount of bytes of ephemeral storage used
    string ephemeral_storage_usage = 4;
}
